welcome.lessons.welcome.array.island.Island.scala.error
island:6: error: value += is not a member of Int
      niv+=1
         ^